syntax = "proto3";

package noteverse;

option go_package = "github.com/deimossy/noteverse/api/proto/noteverse";

service NoteService {
  rpc CreateNote (CreateNoteRequest) returns (CreateNoteResponse);

  rpc GetNote (GetNoteRequest) returns (GetNoteResponse);
}

message Note {
  string id = 1;
  string user_id = 2;
  string content = 3;
  int64 created_at = 4;
  int64 updated_at = 5;
}

message CreateNoteRequest {
  string user_id = 1;
  string content = 2;
}

message CreateNoteResponse {
  Note note = 1;
}

message GetNoteRequest {
  string note_id = 1;
}

message GetNoteResponse {
  Note note = 1;
}
